@@ -2,7 +2,13 @@ Version 0.6.1 (development):
 	added QR and random_unitary methods
 	fixed bug in norm() under sage
 	added Cartan decomposition as experimental module
-	HilbertSpace.{index_iter,dim,basis,is_square,assert_square} methods
+	new HilbertSpace methods:
+		dim
+		index_iter
+		is_square
+		assert_square
+		basis
+		hermitian_basis
 
 Version 0.6 (2011-05-21):
 	implement rich comparison rather than cmp (fixes HilbertSpace() == None)
